--- a/contact.html
+++ b/contact.html
@@ -1,123 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | MyHub</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/feather-icons"></script>
-</head>
-<body class="bg-gray-50 text-gray-900">
-
-  <!-- Navbar -->
-  <header class="bg-white shadow sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
-      <a href="index.html" class="text-xl font-bold text-pink-600">MyHub</a>
-      <nav class="space-x-6 hidden md:flex">
-        <a href="index.html" class="hover:text-pink-600">Home</a>
-        <a href="about.html" class="hover:text-pink-600">About</a>
-        <a href="news.html" class="hover:text-pink-600">News</a>
-        <a href="entertainment.html" class="hover:text-pink-600">Entertainment</a>
-        <a href="education.html" class="hover:text-pink-600">Education</a>
-        <a href="projects.html" class="hover:text-pink-600">Projects</a>
-        <a href="contact.html" class="text-pink-600 font-semibold">Contact</a>
-      </nav>
-      <button class="md:hidden" onclick="toggleMenu()"><i data-feather="menu"></i></button>
-    </div>
-    <div id="mobileMenu" class="hidden flex-col px-6 pb-4 space-y-3 bg-white shadow md:hidden">
-      <a href="index.html" class="hover:text-pink-600">Home</a>
-      <a href="about.html" class="hover:text-pink-600">About</a>
-      <a href="news.html" class="hover:text-pink-600">News</a>
-      <a href="entertainment.html" class="hover:text-pink-600">Entertainment</a>
-      <a href="education.html" class="hover:text-pink-600">Education</a>
-      <a href="projects.html" class="hover:text-pink-600">Projects</a>
-      <a href="contact.html" class="text-pink-600 font-semibold">Contact</a>
-    </div>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="relative bg-gradient-to-r from-pink-600 to-purple-600 text-white py-16 px-6">
-    <div class="max-w-4xl mx-auto text-center">
-      <h1 class="text-4xl md:text-5xl font-extrabold">Get in Touch</h1>
-      <p class="mt-4 text-lg">Let’s connect! I’d love to hear from you.</p>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="max-w-6xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-12 items-center">
-    
-    <!-- Contact Info -->
-    <div>
-      <h2 class="text-2xl font-bold mb-6">Contact Information</h2>
-      <p class="text-gray-600 mb-4">I'm Castro Odhiambo. You can reach me directly via WhatsApp, email, or the contact form.</p>
-      <ul class="space-y-4">
-        <li class="flex items-center space-x-3">
-          <i data-feather="user" class="text-pink-600"></i>
-          <span class="font-semibold">Castro Odhiambo</span>
-        </li>
-        <li class="flex items-center space-x-3">
-          <i data-feather="mail" class="text-pink-600"></i>
-          <a href="mailto:castrodhiambo3@gmail.com" class="text-blue-600 hover:underline">castrodhiambo3@gmail.com</a>
-        </li>
-        <li class="flex items-center space-x-3">
-          <i data-feather="phone" class="text-pink-600"></i>
-          <a href="https://wa.me/254759130506" target="_blank" class="text-green-600 hover:underline">WhatsApp: +254 759 130 506</a>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Contact Form -->
-    <div class="bg-white rounded-xl shadow-lg p-8">
-      <h3 class="text-xl font-semibold mb-6">Send a Message</h3>
-      <form action="#" method="POST" class="space-y-4">
-        <div>
-          <label class="block mb-1 font-medium">Your Name</label>
-          <input type="text" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-400">
-        </div>
-        <div>
-          <label class="block mb-1 font-medium">Your Email</label>
-          <input type="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-400">
-        </div>
-        <div>
-          <label class="block mb-1 font-medium">Message</label>
-          <textarea name="message" rows="4" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-400"></textarea>
-        </div>
-        <button type="submit" class="w-full bg-pink-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-pink-700 transition">Send</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-300 py-10 mt-10">
-    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
-      <div>
-        <h3 class="text-xl font-bold text-white mb-3">MyHub</h3>
-        <p class="text-gray-400">Personal website of Castro Odhiambo. Let’s learn, share, and connect.</p>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold mb-3 text-white">Quick Links</h3>
-        <ul class="space-y-2">
-          <li><a href="index.html" class="hover:text-pink-400">Home</a></li>
-          <li><a href="news.html" class="hover:text-pink-400">News</a></li>
-          <li><a href="projects.html" class="hover:text-pink-400">Projects</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold mb-3 text-white">Follow</h3>
-        <div class="flex space-x-4">
-          <a href="https://wa.me/254759130506" target="_blank" class="hover:text-green-500"><i data-feather="message-circle"></i></a>
-          <a href="mailto:castrodhiambo3@gmail.com" class="hover:text-pink-500"><i data-feather="mail"></i></a>
-        </div>
-      </div>
-    </div>
-    <p class="text-center text-gray-500 mt-8">&copy; 2025 MyHub - Castro Odhiambo. All rights reserved.</p>
-  </footer>
-
-  <script>
-    feather.replace();
-    function toggleMenu() {
-      document.getElementById("mobileMenu").classList.toggle("hidden");
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact | CastroHub</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background-color: #f9fafc;
+      color: #333;
     }
-  </script>
+    header {
+      background: linear-gradient(90deg, #007bff, #00c6ff);
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      padding: 0;
+      margin: 10px 0 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 2.2rem;
+      color: #007bff;
+    }
+    .contact-info {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .contact-info p {
+      margin: 10px 0;
+      font-size: 1.1rem;
+    }
+    .contact-info a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+    .contact-form {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .contact-form label {
+      display: block;
+      margin: 12px 0 6px;
+      font-weight: 600;
+    }
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+    .contact-form textarea {
+      resize: vertical;
+      height: 120px;
+    }
+    .contact-form button {
+      margin-top: 20px;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      background: linear-gradient(90deg, #007bff, #00c6ff);
+      color: white;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      width: 100%;
+    }
+    .contact-form button:hover {
+      opacity: 0.9;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #777;
+      background: #f1f1f1;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h2>CastroHub</h2>
+  <nav>
+    <ul>
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="about.html">👤 About</a></li>
+      <li><a href="news.html">📰 News</a></li>
+      <li><a href="entertainment.html">🎬 Entertainment</a></li>
+      <li><a href="education.html">📚 Education</a></li>
+      <li><a href="projects.html">💼 Projects</a></li>
+      <li><a href="mindspark.html">📺 MindSpark TV</a></li>
+      <li><a href="contact.html">✉️ Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<div class="container">
+  <h1>Get in Touch</h1>
+
+  <div class="contact-info">
+    <p>📱 WhatsApp: <a href="https://wa.me/254759130506" target="_blank">0759130506</a></p>
+    <p>📧 Email: <a href="mailto:castrodhiambo3@gmail.com">castrodhiambo3@gmail.com</a></p>
+    <p>💬 Or send me a direct message below:</p>
+  </div>
+
+  <div class="contact-form">
+    <form id="contactForm">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required />
+
+      <label for="email">Your Email</label>
+      <input type="email" id="email" placeholder="Enter your email" required />
+
+      <label for="message">Your Message</label>
+      <textarea id="message" placeholder="Type your message..." required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</div>
+
+<footer>
+  &copy; 2025 CastroHub | Built with ❤️ by Castro Odhiambo
+</footer>
+
+<script>
+  document.getElementById("contactForm").addEventListener("submit", function(event) {
+    event.preventDefault();
+    alert("✅ Thank you! Your message has been recorded. (Integration with EmailJS or backend can be added here.)");
+    this.reset();
+  });
+</script>
+
 </body>
 </html>
