--- a/entertainment.html
+++ b/entertainment.html
@@ -10,6 +10,24 @@
     body { font-family: 'Poppins', sans-serif; }
     .hero-bg { background: linear-gradient(135deg, #ec4899, #8b5cf6); }
     .card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .filter-btn {
+      background: #f3f4f6;
+      color: #374151;
+      border: 1px solid #e5e7eb;
+      cursor: pointer;
+    }
+    .filter-btn:hover {
+      background: #fce7f3;
+      color: #be185d;
+      transform: translateY(-2px);
+    }
+    .active-filter {
+      background: linear-gradient(135deg, #ec4899, #8b5cf6);
+      color: white !important;
+      border: none;
+      font-weight: 600;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body class="bg-gray-50 text-gray-900">
@@ -37,73 +55,18 @@
 
   <!-- Category Filters -->
   <section class="max-w-6xl mx-auto py-10 px-6 text-center">
-    <div class="flex flex-wrap justify-center gap-3">
-      <button class="filter-btn bg-pink-600 text-white px-4 py-2 rounded-lg" data-category="all">All</button>
-      <button class="filter-btn bg-gray-200 px-4 py-2 rounded-lg" data-category="Video">Videos</button>
-      <button class="filter-btn bg-gray-200 px-4 py-2 rounded-lg" data-category="Music">Music</button>
-      <button class="filter-btn bg-gray-200 px-4 py-2 rounded-lg" data-category="Meme">Memes</button>
-      <button class="filter-btn bg-gray-200 px-4 py-2 rounded-lg" data-category="Comedy">Comedy</button>
+    <div class="flex flex-wrap justify-center gap-3" id="filterContainer">
+      <button class="filter-btn active-filter px-4 py-2 rounded-full" data-category="all">All</button>
+      <button class="filter-btn px-4 py-2 rounded-full" data-category="Video">Videos</button>
+      <button class="filter-btn px-4 py-2 rounded-full" data-category="Music">Music</button>
+      <button class="filter-btn px-4 py-2 rounded-full" data-category="Meme">Memes</button>
+      <button class="filter-btn px-4 py-2 rounded-full" data-category="Comedy">Comedy</button>
     </div>
   </section>
 
-  <!-- Trending Videos -->
-  <section class="max-w-6xl mx-auto px-6 mb-12">
-    <h3 class="text-2xl font-bold mb-6">🎥 Trending Videos</h3>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Video">
-        <iframe class="w-full h-56" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-        <div class="p-4">
-          <h4 class="font-bold">CastroHub Comedy Highlight</h4>
-        </div>
-      </div>
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Video">
-        <iframe class="w-full h-56" src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
-        <div class="p-4">
-          <h4 class="font-bold">Trending Music Video</h4>
-        </div>
-      </div>
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Video">
-        <iframe class="w-full h-56" src="https://www.youtube.com/embed/L_jWHffIx5E" allowfullscreen></iframe>
-        <div class="p-4">
-          <h4 class="font-bold">Throwback Classic</h4>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Music & Podcasts -->
-  <section class="max-w-6xl mx-auto px-6 mb-12">
-    <h3 class="text-2xl font-bold mb-6">🎶 Music & Podcasts</h3>
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="card bg-white rounded-lg shadow p-6" data-category="Music">
-        <h4 class="font-semibold mb-2">Afrobeat Vibes</h4>
-        <audio controls class="w-full">
-          <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-        </audio>
-      </div>
-      <div class="card bg-white rounded-lg shadow p-6" data-category="Music">
-        <h4 class="font-semibold mb-2">CastroHub Podcast</h4>
-        <audio controls class="w-full">
-          <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
-        </audio>
-      </div>
-    </div>
-  </section>
-
-  <!-- Meme Wall -->
-  <section class="max-w-6xl mx-auto px-6 mb-12">
-    <h3 class="text-2xl font-bold mb-6">😂 Meme Wall</h3>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Meme">
-        <img src="https://i.imgflip.com/7i5hjf.jpg" alt="Meme 1" class="w-full">
-      </div>
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Meme">
-        <img src="https://i.imgflip.com/30b1gx.jpg" alt="Meme 2" class="w-full">
-      </div>
-      <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="Meme">
-        <img src="https://i.imgflip.com/7lh3ao.jpg" alt="Meme 3" class="w-full">
-      </div>
-    </div>
+  <!-- Entertainment Grid -->
+  <section class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 lg:grid-cols-3 gap-6 mb-16" id="entertainmentGrid">
+    <!-- JSON will inject items here -->
   </section>
 
   <!-- AI Recommendations -->
@@ -122,25 +85,54 @@
 
   <!-- Scripts -->
   <script>
+    const filterButtons = document.querySelectorAll('.filter-btn');
+    const grid = document.getElementById('entertainmentGrid');
+
+    let allData = [];
+
+    async function fetchEntertainment() {
+      try {
+        const res = await fetch('entertainment.json');
+        allData = await res.json();
+        renderItems();
+      } catch (err) {
+        console.error("Error loading entertainment.json", err);
+      }
+    }
+
+    function renderItems(filter = "all") {
+      grid.innerHTML = "";
+      let filtered = filter === "all" ? allData : allData.filter(item => item.category === filter);
+
+      filtered.forEach(item => {
+        grid.innerHTML += `
+          <div class="card bg-white rounded-lg shadow overflow-hidden" data-category="${item.category}">
+            ${item.type === "video" ? 
+              `<iframe class="w-full h-56" src="${item.src}" allowfullscreen></iframe>` :
+              item.type === "audio" ? 
+              `<div class="p-6"><h4 class="font-semibold mb-2">${item.title}</h4>
+                <audio controls class="w-full">
+                  <source src="${item.src}" type="audio/mpeg">
+                </audio></div>` :
+              item.type === "image" ? 
+              `<img src="${item.src}" alt="${item.title}" class="w-full">` : ""
+            }
+            ${item.type !== "audio" ? `<div class="p-4"><h4 class="font-bold">${item.title}</h4></div>` : ""}
+          </div>
+        `;
+      });
+    }
+
     // Filters
-    const filterBtns = document.querySelectorAll('.filter-btn');
-    const cards = document.querySelectorAll('.card');
-
-    filterBtns.forEach(btn => {
+    filterButtons.forEach(btn => {
       btn.addEventListener('click', () => {
-        document.querySelector('.filter-btn.bg-pink-600').classList.remove('bg-pink-600','text-white');
-        document.querySelector('.filter-btn.bg-pink-600').classList.add('bg-gray-200');
-        btn.classList.remove('bg-gray-200');
-        btn.classList.add('bg-pink-600','text-white');
-
-        const category = btn.dataset.category;
-        cards.forEach(card => {
-          card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
-        });
+        filterButtons.forEach(b => b.classList.remove('active-filter'));
+        btn.classList.add('active-filter');
+        renderItems(btn.dataset.category);
       });
     });
 
-    // AI Suggested Section (simulated)
+    // AI Suggested Section (static for now)
     const suggestions = [
       { title: "🔥 Stand-up Comedy Special", type: "Comedy", img: "https://i.ytimg.com/vi/tgbNymZ7vqY/hqdefault.jpg" },
       { title: "🎧 Chill Beats Playlist", type: "Music", img: "https://via.placeholder.com/400x250" },
@@ -159,6 +151,8 @@
         </div>
       `;
     });
+
+    fetchEntertainment();
   </script>
 </body>
 </html>
